--- a/workflows/scan-cv-workflow/workflow.iam.yml
+++ b/workflows/scan-cv-workflow/workflow.iam.yml
@@ -31,4 +31,6 @@ Properties:
               - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-copyFile-lambda:*
               - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-extractText-lambda
               - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-extractText-lambda:*
+              - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-checkItExperience-lambda*
+              - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-checkCloudExperience-lambda*
             Effect: Allow
