--- a/workflows/scan-cv-workflow/workflow.iam.yml
+++ b/workflows/scan-cv-workflow/workflow.iam.yml
@@ -36,4 +36,5 @@ Properties:
               - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-extractText-lambda
               - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-extractText-lambda:*
               - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-checkNodeExperience-lambda*
+              - arn:aws:lambda:${self:provider.region}:${self:custom.accountId}:function:${self:service}-${self:provider.stage}-checkExcludeList-lambda*
             Effect: Allow
