--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,8 @@ custom:
     region: us-east-1
   inputBucketName: tsh-academy-serverless-workshops-input-bucket-${env:STUDENT_NAME, 'student00'}
   extractedFilesBucketName: tsh-academy-serverless-workshops-extracted-files-${env:STUDENT_NAME, 'student00'}
+  matchedFilesBucketName: tsh-matched-files-bucket-${env:STUDENT_NAME, 'student00'}
+  rejectedFilesBucketName: tsh-rejected-files-bucket-${env:STUDENT_NAME, 'student00'}
 provider:
   name: aws
   runtime: nodejs14.x
@@ -82,4 +84,12 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.extractedFilesBucketName}
+    matchedFilesBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:custom.matchedFilesBucketName}
+    rejectedFilesBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:custom.rejectedFilesBucketName}
     ScanCvWorkflowStateMachineRole: ${file(workflows/scan-cv-workflow/workflow.iam.yml)}
